Changes from wednesday